PROD_10-24-19/force-app/main/default/objects/Opportunity_Assignment__c/fields/Approved_by_Regional_Head__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Regional_Head__c</fullName>
    <description>Used to obtain approval from the PFG Regional Head</description>
    <inlineHelpText>Used to obtain approval from the PFG Regional Head</inlineHelpText>
    <label>Approved by Regional Head</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>