PROD_10-24-19/force-app/main/default/objects/Opportunity_Assignment__c/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup field to select the correct CRM involved in the split</description>
    <inlineHelpText>Select the correct CRM who is the owner of this opportunity</inlineHelpText>
    <label>CRM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>