PROD_10-24-19/force-app/main/default/objects/Opportunity_Assignment__c/fields/Opportunity_Related_to__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Related_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field looks up to the Opportunity</description>
    <inlineHelpText>Select the opportunity that this record should be connected to</inlineHelpText>
    <label>Opportunity Related to</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Assignments</relationshipLabel>
    <relationshipName>Opportunity_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>