PROD_10-24-19/force-app/main/default/objects/Opportunity_Assignment__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>This field is used to select the priority between the CRMs participating in the opportunity.</description>
    <inlineHelpText>Please select whether this CRM is primary or secondary in this opportunity. (NOTE: should the split be 50/50 select the opportunity owner as the &quot;primary&quot; in the split.)</inlineHelpText>
    <label>Opportunity Owner Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary (1st)</fullName>
            </value>
            <value>
                <fullName>Secondary (2nd)</fullName>
            </value>
            <value>
                <fullName>Additional (3rd)</fullName>
            </value>
            <value>
                <fullName>Additional (4th)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>