PROD_10-24-19/force-app/main/default/objects/Opportunity_Assignment__c/listViews/My_Assignments_for_Approval.listView-meta.xml
<ListView>
    <fullName>My_Assignments_for_Approval</fullName>
    <columns>Opportunity_Related_to__c</columns>
    <columns>Percentage_of_Split__c</columns>
    <columns>CRM__c</columns>
    <columns>CRM_Role__c</columns>
    <columns>Approved__c</columns>
    <columns>Comments_Opport_Assignment__c</columns>
    <columns>Total_Capital_for_this_CRM__c</columns>
    <columns>Total_Invested_Capital__c</columns>
    <columns>NAME</columns>
    <columns>Approved_by_Regional_Head__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Opportunity__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Approved_by_Regional_Head__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <filters>
        <field>Approved__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <label>My Assignments for Approval</label>
</ListView>